mernChart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress-frontend
  namespace: mern
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mern-app.local
    http:
      paths:
      - backend:
          service:
            name: mern-client
            port:
              number: 5000
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress-backend
  namespace: mern
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: api.mern-app.local
    http:
      paths:
      - backend:
          service:
            name: mern-server
            port:
              number: 3000
        path: /
        pathType: Prefix
